# timepledge_chatbot

./: .gitignore  README.md  docker-compose.yaml
chatbot_backend/: .dockerignore  Dockerfile  Dockerfile copy  Dockerfile.backend  app.py  chroma.py  main.py  pyproject.toml
chatbot_backend/documents/outputs/: Constitution Amendment No.2 Act of 2005.txt  Constitution of the Republic of Uganda.txt  Constitutional Amendment Act 2005.txt
chatbot_backend/src/: chatbot.py  chroma_handler.py  config.py  schemas.py
chatbot_frontend/: Dockerfile  Dockerfile copy  Dockerfile.frontend  app.py  main.py  pyproject.toml
